stop heartbleed

--- a/styles.css
+++ b/styles.css
@@ -308,150 +308,151 @@ p.center {
 
 .full-bleed {
   max-width: 100%;
-  height: 250px;
+  height: 270px;
 }
 
 .heart-divider {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  background: url('assets/divider-heart-colored.jpg') top left / cover no-repeat;
-  flex-wrap: nowrap;
-  width: 100%;
+  padding: 0;
+  background: url(assets/divider-heart-colored.jpg) top right no-repeat;
+  background-size: cover;
 }
 
 .heart-divider:before {
-  display: block;
-  flex: 1;
-  content: ' ';
-  min-width: var(--gap-size)
 }
 
 .heart-divider:after {
-  display: block;
-  width: 400px;
-  content: ' ';
 }
 
 .heart-divider p {
-  width: 476px;
-  font-size: 19px;
-  line-height: 25px;
+  max-width: 420px;
+  margin: 0 38% 0 auto;
+  flex: 1;
+  font-size: 18px;
+  line-height: 1.4em;
   font-style: italic;
   color: #eaeaea;
   letter-spacing: 0.03em;
+  padding: 20px
 }
 
 .heart-divider-right {
-  flex: 1;
+  width: 40%;
 }
 
 #happenings h2 {
-    width: 100%;font-size: 28px;
-    line-height: 36px;
-    text-align: center;
-    margin: 24px 0;
-    overflow: hidden;
+  width: 100%;
+  font-size: 28px;
+  line-height: 36px;
+  text-align: center;
+  margin: 24px 0;
+  overflow: hidden;
 }
 
 #event-upcoming {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;position: relative;
-    padding: 20px;
-    background: var(--yellow);
-    box-sizing: border-box;
-    margin-bottom: 30px;
-    overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  padding: 20px;
+  background: var(--yellow);
+  box-sizing: border-box;
+  margin-bottom: 30px;
+  overflow: hidden;
 }
 
 #event-upcoming . form-column {
-    position: relative;
-    width: var(--form-size);
-    height: var(--form-size);
-    left: -80px;
-    border-radius:50%;
-    background-color: var(--darkgrey);
-    box-sizing: border-box;
+  position: relative;
+  width: var(--form-size);
+  height: var(--form-size);
+  left: -80px;
+  border-radius: 50%;
+  background-color: var(--darkgrey);
+  box-sizing: border-box;
 }
 
 #event-upcoming .events-column {
-    flex: 1 1 auto;
-    display: flex;flex-direction: column;justify-content: center;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #event-upcoming .event:not(:last-of-type) {
-    border-bottom: 1px solid var(--text-color);
+  border-bottom: 1px solid var(--text-color);
 }
 
 #event-upcoming a {
-    display: block;
-    font-size: 18px;
-    margin-bottom: 20px;
+  display: block;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
 #event-upcoming a:hover {
-    color: var(--lightgrey)
+  color: var(--lightgrey)
 }
-
 
 #subscribe-form {
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    text-align: center;
-    box-sizing: border-box;
-    padding: 30px 50px;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 30px 50px;
 }
 
-
 #subscribe- form label {
-    width: 75%;font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    line-height: 1.3;
-    color: #fff;letter-spacing: 0.02em;text-align: right;
+  width: 75%;
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 20px;
+  line-height: 1.3;
+  color: #fff;
+  letter-spacing: 0.02em;
+  text-align: right;
 }
 
 #subscribe- form input,
 #subscribe- form button {
-    font-family: inherit;height: 45px;
-    border: none;
+  font-family: inherit;
+  height: 45px;
+  border: none;
 
-    font-size: 18px;
-    letter-spacing: 0.02em;
-    box-sizing: border-box;
+  font-size: 18px;
+  letter-spacing: 0.02em;
+  box-sizing: border-box;
 }
 
 #subscribe- form input {
-    max-width: 220px;
-    padding: 10px;
-    text-align: right;
+  max-width: 220px;
+  padding: 10px;
+  text-align: right;
 }
 
-
 #subscribe- form button {
-    max-width: 180px;
-    margin-top: 20px;padding: 10px 20px;
-    text-align: center;
-    color: #efefef;border: 1px solid #efefef;
-    background: transparent;
-    cursor: pointer;
+  max-width: 180px;
+  margin-top: 20px;
+  padding: 10px 20px;
+  text-align: center;
+  color: #efefef;
+  border: 1px solid #efefef;
+  background: transparent;
+  cursor: pointer;
 }
 
 #subscribe-form button:hover {
-    background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .form-column #success-msg {
-    display: none;
-    height: var(--form-size);
-    margin: 0 30px;
-    text-align: right;line-height: var(--form-size);
-    color: #fff;
-    font-size: 22px;
+  display: none;
+  height: var(--form-size);
+  margin: 0 30px;
+  text-align: right;
+  line-height: var(--form-size);
+  color: #fff;
+  font-size: 22px;
 }
 
 .event {
